# MediaPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/henry/mediaplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/henry/mediaplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  video_player_item.xml
app/src/test/java/com/henry/mediaplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
player/: build.gradle
player/src/androidTest/java/com/henry/player/: ExampleInstrumentedTest.java
player/src/main/: AndroidManifest.xml
player/src/main/cpp/: CMakeLists.txt  PLogger.cpp  PLogger.h  player.cpp
player/src/main/cpp/include/libavutil/: error.h
player/src/main/java/com/henry/player/: GCPlayer.java  NativeLib.java
player/src/test/java/com/henry/player/: ExampleUnitTest.java
